--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -1,4 +1,4 @@
-.container{
+.container {
     max-width: 120rem;
     margin: 8rem auto;
     background-color: var(--color-grey-light-1);
@@ -7,21 +7,25 @@
 }
 
 .header {
+    font-size: 1.4rem;
     height: 7rem;
     background-color: #fff;
-    border-bottom: var(--color-grey-light-2)
+    border-bottom: var(--color-grey-light-2);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
-.content{
+.content {
     display: flex;
 }
 
-.sidebar{
+.sidebar {
     background-color: var(--color-grey-dark-1);
     flex: 0 0 18%;
 }
 
-.hotel-view{
+.hotel-view {
     background-color: #fff;
     flex: 1;
 }
