--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -23,9 +23,14 @@
 .sidebar {
     background-color: var(--color-grey-dark-1);
     flex: 0 0 18%;
+    // push "All rights reserved" to the bottom of container
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 .hotel-view {
-    background-color: #fff;
+    background-color: #f4f;
     flex: 1;
+    height: 80rem;
 }
