--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -153,3 +153,14 @@
     text-align: center;
     padding: 2.5rem;
 }
+
+//GALLERY
+.gallery {
+    display: flex;
+    &__photo {
+        width: 100%;
+        // diplay : block/inline-block this avoid having small space underneath an image, 
+        // which happens when we leave it as an inline element
+        display: block;
+    }
+}
