--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -20,17 +20,16 @@ Grey dark 3: #999
     --color-primary: #eb2f64;
     --color-primary-light: #FF3366;
     --color-primary-dark: #BA265D;
-
     --color-grey-light-1: #faf9f9;
     --color-grey-light-2: #f4f2f2;
     --color-grey-light-3: #f0eeee;
     --color-grey-light-4: #ccc;
-
     --color-grey-dark-1: #333;
     --color-grey-dark-2: #777;
     --color-grey-dark-3: #999;
-
-    --shadow-dark: 0 2rem 6rem rgba(0,0,0,0.3)
+    --shadow-dark: 0 2rem 6rem rgba(0, 0, 0, 0.3);
+    --shadow-light: 0 3rem 5rem rgba(0, 0, 0, 0.06);
+    --line: 1px solid var(--color-grey-light-2);
 }
 
 * {
@@ -38,7 +37,7 @@ Grey dark 3: #999
     padding: 0;
 }
 
-*, 
+*,
 *::after,
 *::before {
     box-sizing: inherit;
@@ -57,6 +56,5 @@ body {
     background-size: cover;
     background-repeat: no-repeat;
     color: var(--color-grey-dark-2);
-
     min-height: 100vh;
 }
