--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -32,6 +32,9 @@ Grey dark 3: #999
     --line: 1px solid var(--color-grey-light-2);
 }
 
+$bp-largest: 75em; //1200px
+$bp-large: 68.75em; //1100px
+$bp-medium: 56.25em; //900px
 * {
     margin: 0;
     padding: 0;
@@ -46,6 +49,9 @@ Grey dark 3: #999
 html {
     box-sizing: border-box;
     font-size: 62.5%; // 1 rem = 10px, 10px/16px(default size) = 62,5%
+    @media only screen and (max-width: $bp-large) {
+        font-size: 50%;
+    }
 }
 
 body {
