--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -101,10 +101,20 @@
     font-size: 1.4rem;
     list-style: none;
     margin-top: 3.5rem;
+    @media only screen and (max-width: $bp-medium) {
+        display: flex;
+        margin: 0;
+    }
     &__item {
         position: relative;
         &:not(:last-child) {
             margin-bottom: .5rem;
+            @media only screen and (max-width: $bp-medium) {
+                margin-bottom: 0;
+            }
+        }
+        @media only screen and (max-width: $bp-medium) {
+            flex: 1;
         }
     }
     &__item:before {
@@ -137,6 +147,10 @@
         align-items: center;
         z-index: 10;
         position: relative;
+        @media only screen and (max-width: $bp-medium) {
+            justify-content: center;
+            padding: 2rem;
+        }
     }
     &__icon {
         width: 1.75rem;
@@ -152,6 +166,9 @@
     font-size: 1.2rem;
     text-align: center;
     padding: 2.5rem;
+    @media only screen and (max-width: $bp-medium) {
+        display: none;
+    }
 }
 
 //GALLERY
@@ -302,6 +319,9 @@
     &__count {
         margin-right: auto;
     }
+    &__friends {
+        display: flex;
+    }
     &__photo {
         box-sizing: content-box;
         height: 4rem;
@@ -309,7 +329,7 @@
         border-radius: 50%;
         border: 3px solid #fff;
         &:not(:last-child) {
-            margin-right: -1.5rem;
+            margin-right: -2rem;
         }
     }
 }
@@ -322,6 +342,10 @@
     margin-bottom: 3.5rem;
     position: relative;
     overflow: hidden;
+    @media only screen and (max-width: $bp-medium) {
+        padding: 2rem;
+        margin-bottom: 3rem;
+    }
     &__text {
         margin-bottom: 2rem;
         z-index: 10;
@@ -372,6 +396,9 @@
 .cta {
     padding: 3.5rem 0;
     text-align: center;
+    @media only screen and (max-width: $bp-medium) {
+        padding: 2.5rem 0;
+    }
     &__book-now {
         font-size: 2rem;
         font-weight: 300;
