--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -35,6 +35,8 @@ Grey dark 3: #999
 $bp-largest: 75em; //1200px
 $bp-large: 68.75em; //1100px
 $bp-medium: 56.25em; //900px
+$bp-small: 37.5em; //600px/16=37.5
+$bp-smallest: 31.25em; //200px
 * {
     margin: 0;
     padding: 0;
